feat(OpenAI): 更新模块入口点路径并实现OpenAI核心功能

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,4 @@ dependencies = [
 "homepage" = "https://github.com/ErisPulse/ErisPulse-OpenAI"
 
 [project.entry-points]
-"erispulse.module" = { "OpenAI" = "OpenAI:Main" }
+"erispulse.module" = { "OpenAI" = "ErisPulse_OpenAI:Main" }
